--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
+body {
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    background-color: #FFEBD4;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    color: #6E3A01
+}
+
+button {
+    color: #6E3A01;
+    background-color: #FFEBD4;
+    font-family: 'Lato', sans-serif;
+    border: solid 2px #654321;
+    width: 75px;
+    height: 40px;
+    font-size: 15px;
+}
+
+input {
+    width: 75px;
+    height: 35px;
+    font-family: 'Lato', sans-serif;
+    font-size: 15px;
+    text-align: center;
+}
+
+main {
+    width: 600px;
+}
+
+.title {
+    
+}
+
 .hidden {
     opacity: 0;
 }
